<resources>
    <string name="app_name">PlayMuzio</string>
    <string name="error_authorization">Authorization Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="floating_btn_home">Home</string>
    <string name="search">Search</string>
    <string name="featured_playlists">Featured Playlists</string>
    <string name="error">Connection error. Check your internet connection.</string>
    <string name="new_releases">New Releases</string>
    <string name="may_like">May Like</string>
    <string name="categories">Categories</string>
    <string name="btn_add">Add</string>
    <string name="btn_more">Button More</string>
    <string name="btn_shuffle">Shuffle</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_next">Next</string>
    <string name="btn_repeat">Repeat</string>
</resources>