<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/main_margin_horizontal"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ad_marker_width="8dp"
            app:bar_height="2dp"
            app:buffered_color="@color/secondary_text"
            app:played_color="@color/geraldine"
            app:scrubber_color="@color/geraldine"
            app:unplayed_color="@color/secondary_text"
            app:scrubber_disabled_size="0dp"
            app:scrubber_dragged_size="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:includeFontPadding="false"
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/open_sans_light"
                tools:text="0:00" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView android:id="@id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/open_sans_light"
                tools:text="3:00"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@id/exo_shuffle"
            style="@style/ExoMediaButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_shuffle" />

        <ImageView
            android:id="@+id/exo_prev"
            style="@style/ExoMediaButton.Previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_prev"
            android:layout_marginEnd="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/btn_prev" />

        <ImageView
            android:id="@+id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_play"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/btn_play" />

        <ImageView
            android:id="@+id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_pause"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/btn_pause" />

        <ImageView
            android:id="@+id/exo_next"
            style="@style/ExoMediaButton.Previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_next"
            android:layout_marginStart="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/btn_next" />

        <ImageView
            android:id="@id/exo_repeat_toggle"
            style="@style/ExoMediaButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_repeat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>