<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_background_screen">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentInsetStart="0dp"
        app:contentInsetStart="0dp">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/main_margin_horizontal"
            android:layout_marginEnd="@dimen/main_margin_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/search"
            android:textColor="@color/primary_text"
            android:textColorHint="@drawable/selector_search_view"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="14sp"
            android:textCursorDrawable="@drawable/custom_cursor_search"
            android:background="@drawable/custom_search_view"
            android:drawableEnd="@drawable/ic_baseline_search"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_featured_playlists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/background_featured_playlists"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_featured_playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin_vertical"
                    android:layout_marginStart="@dimen/main_margin_horizontal"
                    tools:text="@string/featured_playlists"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/primary_text"
                    android:textSize="22sp"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_featured_playlists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin_vertical"
                    android:layout_marginBottom="@dimen/main_margin_vertical"
                    android:paddingStart="@dimen/main_margin_horizontal"
                    android:paddingEnd="0dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_browse_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:layout_marginStart="@dimen/main_margin_horizontal"
                android:text="@string/categories"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_browse_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:paddingStart="@dimen/main_padding_horizontal"
                android:paddingEnd="0dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tv_new_releases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:layout_marginStart="@dimen/main_margin_horizontal"
                android:text="@string/new_releases"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_releases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/main_padding_horizontal"
                android:paddingEnd="0dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tv_may_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:layout_marginStart="@dimen/main_margin_horizontal"
                android:text="@string/may_like"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_track_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_vertical"
                android:paddingStart="@dimen/main_padding_horizontal"
                android:layout_marginBottom="@dimen/main_margin_vertical"
                android:paddingEnd="0dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>